# cz-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  Makefile  README.md  analytics-agent-commits.html  install  package.json  profiles.toml.example  pyproject.toml  requirement.txt
.github/: TEAM_MEMBERS
.github/workflows/: build-fat-binaries.yml  pr-standards.yml  promote-stable.yml  release-cos.yml  release.yml
.kiro/steering/: dev-workflow.md
.opencode/: opencode.jsonc
cz_cli/: SKILL.template.md  __init__.py  __main__.py  cli_group.py  connection.py  connection_ctx.py  guide_builder.py  logger.py  main.py  output.py  studio_client.py  studio_identity.py  studio_resolver.py
docs/: analytics-agent-commands.md  datagpt-naming-review.md  moa-user-guide.md
nix/: node_modules.nix
openspec/: config.yaml
patches/: @opentui%2Fcore@0.1.99.patch
pyinstaller/: cz-cli.spec
scripts/: build_fat_multi_platform.sh  cos-promote.mjs  cos-release.mjs  cos-upload.mjs  generate_skills.py  install.sh  npm-publish.sh  prepare-release-assets.mjs  setup.sh
tests/: conftest.py  test_connection.py  test_executions_commands.py  test_guide_builder.py  test_integration_runner_utils.py  test_logger.py  test_masking.py  test_output.py  test_output_format_option.py  test_profile_pat.py  test_skills_installer.py  test_studio_command_registration.py  test_studio_resolver.py  test_task_create_commands.py  test_task_detail_name.py  test_task_execute.py  test_task_runs_name_support.py  test_task_save_config.py  test_task_save_content.py  test_workspace_current.py
(+1344 files in other folders)
